# platform.core.api.vpn-service

./: CMakeLists.txt
daemon/: CMakeLists.txt  vpnsvc-daemon.manifest
daemon/include/: vpn_service_daemon.h  vpndbus.h  vpnerror.h  vpnsvc.h
daemon/interfaces/: org.tizen.vpnsvc.xml
daemon/src/: vpn_service_daemon.c  vpn_service_daemon_main.c  vpndbus.c  vpnerror.c  vpnsvc.c
doc/: vpn_doc.h
framework/: CMakeLists.txt  capi-vpnsvc.pc.in
framework/include/: capi_vpn_service_private.h
framework/src/: capi_vpn_service.c
include/: capi_vpn_service_private.h  tizen_vpn_error.h  vpn_service.h  vpn_service_internal.h
packaging/: capi-vpn-service.spec  dbus-vpnsvc-daemon.conf  org.tizen.vpnsvc.service  vpnsvc-daemon.service
src/: capi_vpn_service.c
test/: CMakeLists.txt  vpn_service_test.c  vpnsvc-test.manifest
